--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>3D product card</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  
+  <div class="site" id="page">
+    <div class="products">
+      <div class="item">
+        <div class="title">
+          <div class="brand"></div>
+          <h2>Nike Shoe 075</h2>
+        </div>
+        <div class="image">
+          <img src="/assets/shoe2.png" alt="shoe2">
+        </div>
+        <div class="meta">
+          <div class="size">
+            <input type="radio" name="size" id="45">
+            <label for="45">45</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
