--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
           <div class="size">
             <input type="radio" name="size" id="45">
             <label for="45">45</label>
+            <input type="radio" name="size" id="46">
+            <label for="46">46</label>
+            <input type="radio" name="size" id="47">
+            <label for="47">47</label>
+            <input type="radio" name="size" id="48">
+            <label for="48">48</label>
           </div>
+          <div class="price">
+            $299.89
+          </div>
+          <div class="addtocart">
+            <button>
+              <span>add to cart</span>
+            </button></div>
         </div>
       </div>
     </div>
