--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3D product card</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
   <div class="site" id="page">
@@ -34,7 +36,9 @@
           <div class="addtocart">
             <button>
               <span>add to cart</span>
-            </button></div>
+              <i class="ri-arrow-right-line"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
