--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="addtocart">
             <button>
               <span>add to cart</span>
-              <i class="ri-arrow-right-line"></i>
+              <i class="ri-arrow-right-line ri-2x"></i>
             </button>
           </div>
         </div>
